# response-mocker

./: .gitignore  Makefile  README.md  pyproject.toml  release.env  sonar-project.properties
.github/: dependabot.yml
.github/scripts/: qlty-coverage-publish.sh
.github/workflows/: build.yaml  deploy-github-release-assets.yml  deploy-pypi.yml  quality-qltysh.yml  quality-sonarcloud.yml  workflow-deployments.yml
.qlty/: qlty.toml
scripts/: git-commit.sh  set-version.sh
src/response_mocker/: cli.py
tests/: test_cli.py
tests/expected-output/: cli-help.txt  cli-version.txt  cli-wrong-options.txt
